@@ -26,7 +26,7 @@
 
   <properties>
       <server.jvm.args>
-          ${jvm.args.other} ${jvm.args.memory} ${jvm.args.debug}
+          ${jvm.args.other} ${jvm.args.memory} ${jvm.args.debug} ${jvm.args.jdk9}
       </server.jvm.args>
   </properties>
 
@@ -457,5 +457,16 @@
         </plugins>
       </build>
     </profile>
+        <profile>
+            <id>j9</id>
+            <activation>
+                <jdk>[1.9,)</jdk>
+            </activation>
+            <properties>
+                <jvm.args.jdk9>
+                    --add-opens=java.base/java.security=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED
+                </jvm.args.jdk9>
+            </properties>
+        </profile>
   </profiles>
 </project>
